dmz/openspeedtest/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openspeedtest-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`speedtest.durp.info`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: authentik-proxy-provider
      namespace: traefik  
    services:
    - name: openspeedtest
      port: 3000
  tls:
    secretName: openspeedtest-tls

---

kind: Service
apiVersion: v1
metadata:
  name: openspeedtest-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: speedtest.durp.info
spec:
  type: ExternalName
  externalName: durp.info
